--- a/analysis/Clumpy_matched_to_GSWLC.ipynb
+++ b/analysis/Clumpy_matched_to_GSWLC.ipynb
@@ -74,275 +74,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 165,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['OBJID',\n",
-       " 'ra',\n",
-       " 'dec',\n",
-       " 'NUM_SPEC',\n",
-       " 'AVG_Z',\n",
-       " 'DR12url',\n",
-       " 'DR12_OBJID',\n",
-       " 'DR12_RA',\n",
-       " 'DR12_DEC',\n",
-       " 'DR12_run',\n",
-       " 'DR12_rerun',\n",
-       " 'DR12_camcol',\n",
-       " 'DR12_field',\n",
-       " 'DR12_type',\n",
-       " 'DR12_petroMag_u',\n",
-       " 'DR12_petroMag_g',\n",
-       " 'DR12_petroMag_r',\n",
-       " 'DR12_petroMag_i',\n",
-       " 'DR12_petroMag_z',\n",
-       " 'DR12_petrorad_u',\n",
-       " 'DR12_petrorad_g',\n",
-       " 'DR12_petrorad_r',\n",
-       " 'DR12_petrorad_i',\n",
-       " 'DR12_petrorad_z',\n",
-       " 'DR12_extinction_u',\n",
-       " 'DR12_extinction_g',\n",
-       " 'DR12_extinction_r',\n",
-       " 'DR12_extinction_i',\n",
-       " 'DR12_extinction_z',\n",
-       " 'zooniverse_id',\n",
-       " 'survey_id',\n",
-       " 'Table',\n",
-       " 'RA',\n",
-       " 'DEC',\n",
-       " 'imaging',\n",
-       " 'total_count',\n",
-       " 'total_weight',\n",
-       " 't01_smooth_or_features_a01_smooth_fraction',\n",
-       " 't01_smooth_or_features_a01_smooth_weighted_fraction',\n",
-       " 't01_smooth_or_features_a01_smooth_flag',\n",
-       " 't01_smooth_or_features_a02_features_or_disk_fraction',\n",
-       " 't01_smooth_or_features_a02_features_or_disk_weighted_fraction',\n",
-       " 't01_smooth_or_features_a02_features_or_disk_flag',\n",
-       " 't01_smooth_or_features_a03_star_or_artifact_fraction',\n",
-       " 't01_smooth_or_features_a03_star_or_artifact_weighted_fraction',\n",
-       " 't01_smooth_or_features_a03_star_or_artifact_flag',\n",
-       " 't01_smooth_or_features_total_count',\n",
-       " 't01_smooth_or_features_total_weight',\n",
-       " 't02_edgeon_a01_yes_fraction',\n",
-       " 't02_edgeon_a01_yes_weighted_fraction',\n",
-       " 't02_edgeon_a02_no_fraction',\n",
-       " 't02_edgeon_a02_no_weighted_fraction',\n",
-       " 't02_edgeon_total_count',\n",
-       " 't02_edgeon_total_weight',\n",
-       " 't03_bar_a01_bar_fraction',\n",
-       " 't03_bar_a01_bar_weighted_fraction',\n",
-       " 't03_bar_a02_no_bar_fraction',\n",
-       " 't03_bar_a02_no_bar_weighted_fraction',\n",
-       " 't03_bar_total_count',\n",
-       " 't03_bar_total_weight',\n",
-       " 't04_spiral_a01_spiral_fraction',\n",
-       " 't04_spiral_a01_spiral_weighted_fraction',\n",
-       " 't04_spiral_a02_no_spiral_fraction',\n",
-       " 't04_spiral_a02_no_spiral_weighted_fraction',\n",
-       " 't04_spiral_total_count',\n",
-       " 't04_spiral_total_weight',\n",
-       " 't05_bulge_prominence_a01_no_bulge_fraction',\n",
-       " 't05_bulge_prominence_a01_no_bulge_weighted_fraction',\n",
-       " 't05_bulge_prominence_a02_just_noticeable_fraction',\n",
-       " 't05_bulge_prominence_a02_just_noticeable_weighted_fraction',\n",
-       " 't05_bulge_prominence_a03_obvious_fraction',\n",
-       " 't05_bulge_prominence_a03_obvious_weighted_fraction',\n",
-       " 't05_bulge_prominence_a04_dominant_fraction',\n",
-       " 't05_bulge_prominence_a04_dominant_weighted_fraction',\n",
-       " 't05_bulge_prominence_total_count',\n",
-       " 't05_bulge_prominence_total_weight',\n",
-       " 't06_odd_a01_yes_fraction',\n",
-       " 't06_odd_a01_yes_weighted_fraction',\n",
-       " 't06_odd_a02_no_fraction',\n",
-       " 't06_odd_a02_no_weighted_fraction',\n",
-       " 't06_odd_total_count',\n",
-       " 't06_odd_total_weight',\n",
-       " 't07_rounded_a01_completely_round_fraction',\n",
-       " 't07_rounded_a01_completely_round_weighted_fraction',\n",
-       " 't07_rounded_a02_in_between_fraction',\n",
-       " 't07_rounded_a02_in_between_weighted_fraction',\n",
-       " 't07_rounded_a03_cigar_shaped_fraction',\n",
-       " 't07_rounded_a03_cigar_shaped_weighted_fraction',\n",
-       " 't07_rounded_total_count',\n",
-       " 't07_rounded_total_weight',\n",
-       " 't08_odd_feature_a01_ring_fraction',\n",
-       " 't08_odd_feature_a01_ring_weighted_fraction',\n",
-       " 't08_odd_feature_a02_lens_or_arc_fraction',\n",
-       " 't08_odd_feature_a02_lens_or_arc_weighted_fraction',\n",
-       " 't08_odd_feature_a03_disturbed_fraction',\n",
-       " 't08_odd_feature_a03_disturbed_weighted_fraction',\n",
-       " 't08_odd_feature_a04_irregular_fraction',\n",
-       " 't08_odd_feature_a04_irregular_weighted_fraction',\n",
-       " 't08_odd_feature_a05_other_fraction',\n",
-       " 't08_odd_feature_a05_other_weighted_fraction',\n",
-       " 't08_odd_feature_a06_merger_fraction',\n",
-       " 't08_odd_feature_a06_merger_weighted_fraction',\n",
-       " 't08_odd_feature_a07_dust_lane_fraction',\n",
-       " 't08_odd_feature_a07_dust_lane_weighted_fraction',\n",
-       " 't08_odd_feature_total_count',\n",
-       " 't08_odd_feature_total_weight',\n",
-       " 't09_bulge_shape_a01_rounded_fraction',\n",
-       " 't09_bulge_shape_a01_rounded_weighted_fraction',\n",
-       " 't09_bulge_shape_a02_boxy_fraction',\n",
-       " 't09_bulge_shape_a02_boxy_weighted_fraction',\n",
-       " 't09_bulge_shape_a03_no_bulge_fraction',\n",
-       " 't09_bulge_shape_a03_no_bulge_weighted_fraction',\n",
-       " 't09_bulge_shape_total_count',\n",
-       " 't09_bulge_shape_total_weight',\n",
-       " 't10_arms_winding_a01_tight_fraction',\n",
-       " 't10_arms_winding_a01_tight_weighted_fraction',\n",
-       " 't10_arms_winding_a02_medium_fraction',\n",
-       " 't10_arms_winding_a02_medium_weighted_fraction',\n",
-       " 't10_arms_winding_a03_loose_fraction',\n",
-       " 't10_arms_winding_a03_loose_weighted_fraction',\n",
-       " 't10_arms_winding_total_count',\n",
-       " 't10_arms_winding_total_weight',\n",
-       " 't11_arms_number_a01_1_fraction',\n",
-       " 't11_arms_number_a01_1_weighted_fraction',\n",
-       " 't11_arms_number_a02_2_fraction',\n",
-       " 't11_arms_number_a02_2_weighted_fraction',\n",
-       " 't11_arms_number_a03_3_fraction',\n",
-       " 't11_arms_number_a03_3_weighted_fraction',\n",
-       " 't11_arms_number_a04_4_fraction',\n",
-       " 't11_arms_number_a04_4_weighted_fraction',\n",
-       " 't11_arms_number_a05_more_than_4_fraction',\n",
-       " 't11_arms_number_a05_more_than_4_weighted_fraction',\n",
-       " 't11_arms_number_a06_cant_tell_fraction',\n",
-       " 't11_arms_number_a06_cant_tell_weighted_fraction',\n",
-       " 't11_arms_number_total_count',\n",
-       " 't11_arms_number_total_weight',\n",
-       " 't12_clumpy_a01_yes_fraction',\n",
-       " 't12_clumpy_a01_yes_weighted_fraction',\n",
-       " 't12_clumpy_a02_no_fraction',\n",
-       " 't12_clumpy_a02_no_weighted_fraction',\n",
-       " 't12_clumpy_total_count',\n",
-       " 't12_clumpy_total_weight',\n",
-       " 't13_bright_clump_a01_yes_fraction',\n",
-       " 't13_bright_clump_a01_yes_weighted_fraction',\n",
-       " 't13_bright_clump_a02_no_fraction',\n",
-       " 't13_bright_clump_a02_no_weighted_fraction',\n",
-       " 't13_bright_clump_total_count',\n",
-       " 't13_bright_clump_total_weight',\n",
-       " 't14_bright_clump_central_a01_yes_fraction',\n",
-       " 't14_bright_clump_central_a01_yes_weighted_fraction',\n",
-       " 't14_bright_clump_central_a02_no_fraction',\n",
-       " 't14_bright_clump_central_a02_no_weighted_fraction',\n",
-       " 't14_bright_clump_central_total_count',\n",
-       " 't14_bright_clump_central_total_weight',\n",
-       " 't15_clumps_arrangement_a01_line_fraction',\n",
-       " 't15_clumps_arrangement_a01_line_weighted_fraction',\n",
-       " 't15_clumps_arrangement_a02_chain_fraction',\n",
-       " 't15_clumps_arrangement_a02_chain_weighted_fraction',\n",
-       " 't15_clumps_arrangement_a03_cluster_fraction',\n",
-       " 't15_clumps_arrangement_a03_cluster_weighted_fraction',\n",
-       " 't15_clumps_arrangement_a04_spiral_fraction',\n",
-       " 't15_clumps_arrangement_a04_spiral_weighted_fraction',\n",
-       " 't15_clumps_arrangement_total_count',\n",
-       " 't15_clumps_arrangement_total_weight',\n",
-       " 't16_clumps_count_a02_2_fraction',\n",
-       " 't16_clumps_count_a02_2_weighted_fraction',\n",
-       " 't16_clumps_count_a03_3_fraction',\n",
-       " 't16_clumps_count_a03_3_weighted_fraction',\n",
-       " 't16_clumps_count_a04_4_fraction',\n",
-       " 't16_clumps_count_a04_4_weighted_fraction',\n",
-       " 't16_clumps_count_a05_more_than_4_fraction',\n",
-       " 't16_clumps_count_a05_more_than_4_weighted_fraction',\n",
-       " 't16_clumps_count_a06_cant_tell_fraction',\n",
-       " 't16_clumps_count_a06_cant_tell_weighted_fraction',\n",
-       " 't16_clumps_count_a01_1_fraction',\n",
-       " 't16_clumps_count_a01_1_weighted_fraction',\n",
-       " 't16_clumps_count_total_count',\n",
-       " 't16_clumps_count_total_weight',\n",
-       " 't17_clumps_symmetrical_a01_yes_fraction',\n",
-       " 't17_clumps_symmetrical_a01_yes_weighted_fraction',\n",
-       " 't17_clumps_symmetrical_a02_no_fraction',\n",
-       " 't17_clumps_symmetrical_a02_no_weighted_fraction',\n",
-       " 't17_clumps_symmetrical_total_count',\n",
-       " 't17_clumps_symmetrical_total_weight',\n",
-       " 't18_clumps_embedded_a01_yes_fraction',\n",
-       " 't18_clumps_embedded_a01_yes_weighted_fraction',\n",
-       " 't18_clumps_embedded_a02_no_fraction',\n",
-       " 't18_clumps_embedded_a02_no_weighted_fraction',\n",
-       " 't18_clumps_embedded_total_count',\n",
-       " 't18_clumps_embedded_total_weight',\n",
-       " 'location',\n",
-       " 'true_clumpy',\n",
-       " 'RUN',\n",
-       " 'RERUN',\n",
-       " 'CAMCOL',\n",
-       " 'FIELD',\n",
-       " 'OBJ',\n",
-       " 'PETROR50_R',\n",
-       " 'PETROR90_R',\n",
-       " 'PETROMAG_U',\n",
-       " 'PETROMAG_G',\n",
-       " 'PETROMAG_R',\n",
-       " 'PETROMAG_I',\n",
-       " 'PETROMAG_Z',\n",
-       " 'PETROMAGERR_U',\n",
-       " 'PETROMAGERR_G',\n",
-       " 'PETROMAGERR_R',\n",
-       " 'PETROMAGERR_I',\n",
-       " 'PETROMAGERR_Z',\n",
-       " 'PSFMAG_R',\n",
-       " 'FIBERMAG_R',\n",
-       " 'DEVMAG_R',\n",
-       " 'DEVMAGERR_R',\n",
-       " 'EXPMAG_R',\n",
-       " 'EXPMAGERR_R',\n",
-       " 'FRACDEV_R',\n",
-       " 'MU50_R',\n",
-       " 'EXTINCTION_U',\n",
-       " 'EXTINCTION_G',\n",
-       " 'EXTINCTION_R',\n",
-       " 'EXTINCTION_I',\n",
-       " 'EXTINCTION_Z',\n",
-       " 'ROWC_U',\n",
-       " 'COLC_U',\n",
-       " 'ROWC_G',\n",
-       " 'COLC_G',\n",
-       " 'ROWC_R',\n",
-       " 'COLC_R',\n",
-       " 'ROWC_I',\n",
-       " 'COLC_I',\n",
-       " 'ROWC_Z',\n",
-       " 'COLC_Z',\n",
-       " 'CMODELMAG_R',\n",
-       " 'CMODELMAGERR_R',\n",
-       " 'REDSHIFT',\n",
-       " 'REDSHIFTERR',\n",
-       " 'PETROMAG_MU',\n",
-       " 'PETROMAG_MG',\n",
-       " 'PETROMAG_MR',\n",
-       " 'PETROMAG_MI',\n",
-       " 'PETROMAG_MZ',\n",
-       " 'PETROMAGERR_MU',\n",
-       " 'PETROMAGERR_MG',\n",
-       " 'PETROMAGERR_MR',\n",
-       " 'PETROMAGERR_MI',\n",
-       " 'PETROMAGERR_MZ',\n",
-       " 'PETROR50_R_KPC',\n",
-       " 'REGION',\n",
-       " 'PETROR50_R_KPC_SIMPLE_BIN',\n",
-       " 'PETROMAG_MR_SIMPLE_BIN',\n",
-       " 'REDSHIFT_SIMPLE_BIN',\n",
-       " 'WVT_BIN']"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "clumpy2.colnames"
+    "#clumpy2.colnames"
    ]
   },
   {
