familiarizing myself with what I did last fall

--- a/clumpyzoo/Estimate_clumpy_frac_in_GZ2.ipynb
+++ b/clumpyzoo/Estimate_clumpy_frac_in_GZ2.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/oxymoronic/.local/lib/python2.7/site-packages/IPython/kernel/__init__.py:13: ShimWarning: The `IPython.kernel` package has been deprecated. You should import from ipykernel or jupyter_client instead.\n",
+      "  \"You should import from ipykernel or jupyter_client instead.\", ShimWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "from astropy.table import Table, join\n",
     "import matplotlib.pyplot as plt\n",
@@ -16,11 +25,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: hdu= was not specified but multiple tables are present, reading in first available table (hdu=1) [astropy.io.fits.connect]\n",
+      "WARNING:astropy:hdu= was not specified but multiple tables are present, reading in first available table (hdu=1)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -35,7 +52,7 @@
     "print len(stripe82)\n",
     "\n",
     "# Import SDSS ancillary data from DR7 used with GZ2 galaxies\n",
-    "sdss = Table.read('../gzcodez/catalogs_GZ/zoo2AncillaryInfo.fits')"
+    "sdss = Table.read('../../gzcodez/catalogs_GZ/zoo2AncillaryInfo.fits')"
    ]
   },
   {
@@ -47,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
